Fixed whitespace issue on FAQ page for desktop & tabelet screens

--- a/css/main.css
+++ b/css/main.css
@@ -737,7 +737,7 @@ input[type=button] {
 
   .faq .content-wrapper {
     justify-content: space-between;
-    margin: 117px 0;
+    margin: 135px 0;
   }
 
   .faq-content {
@@ -848,7 +848,7 @@ input[type=button] {
   FAQ Page
   ========================================================================== */
   .faq .content-wrapper {
-    margin: 110px 0;
+    margin: 130px 0;
   }
   
   .faq h2 {
